Unit tests for ImportServiceImpl class were created